--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="reveal left">
               <div class="podium-container">
                 <div class="reveal grid2-container">
-                  <h3 class="feature-number" style="color: #c0392b">01</h3>
+                  <h3 class="feature-number" style="color: #f28705">01</h3>
                   <h3 class="section-title">
                     Pemantauan Kondisi Mesin Milling untuk Peningkatan Efisiensi
                   </h3>
@@ -123,7 +123,7 @@
             <div class="reveal right">
               <div class="podium-container">
                 <div class="reveal grid2-container">
-                  <h3 class="feature-number" style="color: #00008b">02</h3>
+                  <h3 class="feature-number" style="color: #f28705">02</h3>
                   <h3 class="section-title">
                     Kelemahan Pemeliharaan Preventif Tradisional
                   </h3>
@@ -529,7 +529,7 @@
           ><a href="#"><i class="fab fa-linkedin"></i></a
           ><a href="#"><i class="fab fa-instagram"></i></a>
         </div>
-        <p>&copy; 2024 [Nama Anda].</p>
+        <p>&copy; 2025 Rijal Rahman Zuhri</p>
       </div>
     </footer>
     <div id="floating-nav">
